--- a/Ponderada2/templates/index.html
+++ b/Ponderada2/templates/index.html
@@ -3,7 +3,7 @@
         <center>
             <form action="" method="POST">
                 <div class="form-outline my-4 w-25">
-                    <input name="user" type="text" class="form-control btn-outline-secondary" />
+                    <input name="username" type="text" class="form-control btn-outline-secondary" />
                     <label class="form-label">User</label>
                 </div>
                 <div class="form-outline mb-4 w-25">
