--- a/Ponderada3/templates/index.html
+++ b/Ponderada3/templates/index.html
@@ -6,9 +6,10 @@
 <title>Ponderada2</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<link href="{{ url_for('static', path='/css/style.css')}}" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
 <body class="text-dark bg-light">
+    <form action="/predict" method="POST">
         <center class="table-responsive">
             <h1>
                 Customer Segmentation
@@ -16,24 +17,41 @@
             <p>
                 <strong>Link para o dataset:</strong> https://www.kaggle.com/datasets/joebeachcapital/customer-segmentation
             </p>
-            <table class="mt-3 mb-3 w-50 table table-striped table-light table-bordered table-sm">
-                <thead>
-                    <tr>
-                        <th class="title">Gender</th>
-                        <th class="title">Age</th>
-                        <th class="title">Annual Income (k$)</th>
-                        <th class="title">Spending Score (1-100)</th>
-                    </tr>
-                </thead>
+            <table class="mt-3 w-50 table table-light table-bordered border-dark">
+                <tbody>
+                    <th class="title">Gender</th>
+                    <td class="title">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" value="0">
+                            <label class="form-check-label" for="inlineRadio1">Female</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" value="1">
+                            <label class="form-check-label" for="inlineRadio2">Male</label>
+                        </div>
+                    </td>
+                </tbody>
                 <tbody>
                     <tr>
-                        <td>Male</td>
-                        <td>35</td>
-                        <td>127</td>
-                        <td></td>                                        
+                        <th class="title">Age</th>
+                        <td>
+                            <input type="number" name="age" class="form-control" id="age">
+                        </td>
+                    </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                        <th class="title">Anual Income (k$)</th>
+                        <td>
+                            <input type="number" name="anual_income" class="form-control" id="anual_income">
+                        </td>
                     </tr>
                 </tbody>
             </table>
-            <a class="create btn btn-outline-dark" href="create" title="Create">Nova previsão</a>
+            <input type="submit" class="mt-4 create btn btn-dark" value="Nova previsão"></input>
+            <div class="mt-5 w-15 border border-dark rounded-3 border">
+                <strong class="text-dark">{{prediction}}</strong>
+            </div>
         </center>
+    </form>
 </body>
