--- a/Ponderada3/static/css/style.css
+++ b/Ponderada3/static/css/style.css
@@ -2,6 +2,10 @@
     background-color: #212529 !important;
     border-color: #212529 !important;
 }
+.btn-outline-dark:hover {
+    background-color: #fff!important;
+    color:#212529!important;
+}
 .w-15{
     width: 15%;
 }
