--- a/Ponderada3/templates/index.html
+++ b/Ponderada3/templates/index.html
@@ -14,19 +14,17 @@
             <h1>
                 Customer Segmentation
             </h1>
-            <p>
-                <strong>Link para o dataset:</strong> https://www.kaggle.com/datasets/joebeachcapital/customer-segmentation
-            </p>
+                <strong>Link para o dataset: </strong><a href="https://www.kaggle.com/datasets/joebeachcapital/customer-segmentation" class="link-dark">https://www.kaggle.com/datasets/joebeachcapital/customer-segmentation</a>
             <table class="mt-3 w-50 table table-light table-bordered border-dark">
                 <tbody>
                     <th class="title">Gender</th>
                     <td class="title">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" value="0">
+                            <input class="form-check-input btn-outline-dark" type="radio" name="inlineRadioOptions" value="0">
                             <label class="form-check-label" for="inlineRadio1">Female</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" value="1">
+                            <input class="form-check-input btn-outline-dark" type="radio" name="inlineRadioOptions" value="1">
                             <label class="form-check-label" for="inlineRadio2">Male</label>
                         </div>
                     </td>
@@ -35,7 +33,7 @@
                     <tr>
                         <th class="title">Age</th>
                         <td>
-                            <input type="number" name="age" class="form-control" id="age">
+                            <input type="number" name="age" class="form-control btn-outline-dark" id="age">
                         </td>
                     </tr>
                 </tbody>
@@ -43,7 +41,7 @@
                     <tr>
                         <th class="title">Anual Income (k$)</th>
                         <td>
-                            <input type="number" name="anual_income" class="form-control" id="anual_income">
+                            <input type="number" name="anual_income" class="form-control btn-outline-dark" id="anual_income">
                         </td>
                     </tr>
                 </tbody>
