feat: :sparkles: functional dashboard

--- a/Ponderada4/app/templates/index.html
+++ b/Ponderada4/app/templates/index.html
@@ -50,7 +50,7 @@
             <div class="mt-5 w-15 border border-dark rounded-3 border">
                 <strong class="text-dark">{{prediction}}</strong>
             </div>
-            <img src="{{url_for('static', path='/img/grafico.png')}}" class="mt-5 w-50">
+            <img src="/graph" class="mt-5 w-50">
         </center>
     </form>
 </body>
